# comenq

./: .gitignore  .goreleaser.yaml  .markdownlint-cli2.jsonc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  dylint.toml  rust-toolchain.toml  typos.local.toml  typos.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  dependabot-automerge.yml  mutation-testing.yml  release-dry-run.yml  release.yml
crates/comenq/: Cargo.toml  build.rs
crates/comenq/src/: client.rs  lib.rs  main.rs  output.rs
crates/comenqd/: Cargo.toml  build.rs
crates/comenqd/src/: config.rs  daemon.rs  lib.rs  listener.rs  logging.rs  main.rs  queue.rs  store.rs  supervisor.rs  util.rs  worker.rs
crates/comenqd/src/config/: tests.rs  tokens.rs
crates/comenqd/src/store/: history.rs  tests.rs
crates/comenqd/src/supervisor/: tests.rs
crates/comenqd/src/worker/: tests.rs
crates/comenqd/tests/: daemon.rs  listener.rs  retry_helper.rs  supervisor.rs  util.rs
crates/comenqd/tests/fixtures/: github_comment_response.json  github_error_response.json
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
docs/: adaptive-timeouts.md  automated-cross-platform-packaging.md  behavioural-testing-in-rust-with-cucumber.md  comenq-design.md  developers-guide.md  roadmap.md  rstest-bdd-users-guide.md  rust-doctest-dry-guide.md  rust-testing-with-rstest-fixtures.md
packaging/comenqd/: config.toml
packaging/config/: comenqd-user.toml  comenqd.toml
packaging/darwin/: comenqd.plist
packaging/linux/: comenqd-user.service  comenqd.service  postinstall.sh  preinstall.sh  preremove.sh
packaging/man/: comenq.1  comenqd.1
packaging/shared/: config.toml
scripts/tests/: test_typos_rollout_check.py
src/: lib.rs  main.rs  protocol.rs  workflow.rs
test-support/: Cargo.toml
test-support/src/: daemon.rs  env_guard.rs  lib.rs  logging.rs  util.rs  workflow.rs
tests/: cli.rs  cucumber.rs  fs_wait.rs  wait_for_path.rs
tests/features/: cli.feature  client_main.feature  comment_request.feature  config.feature  history.feature  listener.feature  packaging.feature  queue.feature  release.feature  worker.feature
tests/steps/: cli_steps.rs  client_main_steps.rs  comment_steps.rs  config_steps.rs  history_steps.rs  listener_steps.rs  mod.rs  packaging_steps.rs  queue_steps.rs  release_steps.rs  worker_steps.rs  worker_token_steps.rs
tests/support/: env_guard.rs  fs.rs  mod.rs  util.rs
tests/util/: mod.rs  test_helpers.rs
tests/workflow_contracts/: mutation_testing_test.py
