[package]
name = "comenq"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
comenq-lib = { path = "../.." }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = "0.18.0"
tempfile = "3.10" # latest 3.x at time of writing; update as new patch versions release
