[package]
name = "comenqd"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
octocrab = { workspace = true }
yaque = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
comenq-lib = { path = "../.." }
ortho_config = { workspace = true }
figment = { version = "0.10", default-features = false, features = ["env", "toml"] }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
wiremock = { workspace = true }
test-support = { path = "../../test-support" }
test-utils = { path = "../test-utils" }
