[package]
name = "comenqd"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
octocrab = { workspace = true }
yaque = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
comenq-lib = { path = "../.." }
ortho_config = { workspace = true }
figment = { version = "0.10", default-features = false, features = ["env", "toml"] }
test-support = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true } # latest 3.x at time of writing; update as new patch versions release
serial_test = "2"
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
# Enable helpers from the `test-support` crate for integration tests.
test-support = ["dep:test-support"]
